--- a/src/components/core/NewUser/NewUser.module.css
+++ b/src/components/core/NewUser/NewUser.module.css
@@ -1,5 +1,5 @@
 .newUser {
-    border: 1px solid wheat;
+    border: 1px solid var(--c-main);
     padding: clamp(18px, 2vw, 16px);
     border-radius: 1rem;
     display: grid;
@@ -19,8 +19,6 @@
 }
 .newUser__input,
 .newUser__select {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
 
     display: grid;
